[gd_scene load_steps=11 format=3 uid="uid://bntdu5kxer360"]

[ext_resource type="StyleBox" uid="uid://db2rsd8ficf4o" path="res://resources/others/betterwindow.tres" id="1_1jiao"]
[ext_resource type="Script" path="res://resources/scenes/playnelixdoc/nelix_window.gd" id="2_mpy32"]
[ext_resource type="FontFile" uid="uid://crc4df8q4f8i6" path="res://resources/fonts/Vipervibes.ttf" id="4_i2oaq"]
[ext_resource type="AudioStream" uid="uid://cn8sj2ajke2r6" path="res://resources/audio/close.wav" id="4_qs3cc"]

[sub_resource type="LabelSettings" id="LabelSettings_06psj"]
line_spacing = 1.0
font = ExtResource("4_i2oaq")
font_size = 8
font_color = Color(1, 0, 0, 1)
outline_size = 4
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_03pvy"]
line_spacing = 1.0
font = ExtResource("4_i2oaq")
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hwrur"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jpei3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pfp1g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tmjkm"]

[node name="window" type="Panel" groups=["windows"]]
custom_minimum_size = Vector2(123, 57)
offset_right = 123.0
offset_bottom = 57.0
scale = Vector2(3, 3)
theme_override_styles/panel = ExtResource("1_1jiao")
script = ExtResource("2_mpy32")
can_drag = true
is_instance_type = true

[node name="close_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qs3cc")

[node name="bodytext" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.8333
offset_top = -10.1667
offset_right = 66.1667
offset_bottom = 43.8333
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "Indisponivel 

no 

momento"
label_settings = SubResource("LabelSettings_06psj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="windowname" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 2.0
offset_right = 146.5
offset_bottom = 18.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
text = "nelix
"
label_settings = SubResource("LabelSettings_03pvy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="draghandle" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_top = 1.0
offset_right = 43.5
offset_bottom = 10.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_hwrur")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 9.0
grow_horizontal = 0
theme_override_constants/separation = 1
metadata/_edit_group_ = true

[node name="maximize" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_jpei3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pfp1g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tmjkm")

[node name="close" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxEmpty_jpei3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pfp1g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_tmjkm")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="draghandle" to="." method="_on_draghandle_gui_input"]
[connection signal="pressed" from="HBoxContainer/maximize" to="." method="_on_maximize_pressed"]
[connection signal="pressed" from="HBoxContainer/close" to="." method="_on_close_pressed"]
